assets/css/style.css
*{
  font-family: 'Poiret One', cursive;
}
#loading{
  position: fixed;
  width: 100%;
  height: 100vh;
  background: #03090f url('https://www.icegif.com/wp-content/uploads/loading-icegif.gif?fit=880%2C440&ssl=1') no-repeat center;
  z-index: 999;
}
.bg-info{
/*   background-color: #2e2e2e!important;
  box-shadow: 0px 0px 16px 9px black; */
   background-color: #343a40 !important;
  box-shadow: 0px 0px 16px 9px black;
}

.navbar-light .navbar-nav 
.active>.nav-link, .navbar-light 
.navbar-nav .nav-link.active, 
.navbar-light .navbar-nav .nav-link.show, 
.navbar-light .navbar-nav .show>.nav-link{
  color: rgb(243 243 243);
  font-weight: bold;
}
/* Category */
.form-check-input{
  border-radius: 15px;
}

.container h1{
  padding-top: 70px;
  color: rgb(255, 255, 255);
  font-family: 'Poiret One', cursive;
  font-weight: bolder;
  letter-spacing: 0.1em;
}

.navbar-light .navbar-nav
.nav-link{
  color: rgb(255 255 255 / 50%);
  transition-duration: 0.3s;
  font-weight: bold;
}
.navbar-light .navbar-nav
.nav-link:hover{
  transition-duration: 0.3s;
  color: rgb(255 255 255 / 100%);
}
html{
  scroll-behavior: smooth;
}

.input-box {
  border: none;
  border-bottom: 1.5px solid rgba(168, 154, 154, 0.322);
  border-radius: 0px;
  transition: none;
  width: 100%;
  padding-bottom: 2px;
  border-radius: 15px;
}
.input-box:focus {
  outline: none;
  border-bottom: 1.5px solid yellowgreen;
  /* zoom: 1.1; */
  transform: scaleY(1.05);
}
.input-box {
  transition: border 0.5s ease-out;
  /* transition: transform 0.5s ease-out; */
}


.btn {
    width: 150px;
    height: 50px;
    border: none;
    outline: none;
    color: #fff;
    background: #5282d4;
  background-image: -webkit-linear-gradient(top, #5282d4, #28667d);
  background-image: -moz-linear-gradient(top, #5282d4, #28667d);
  background-image: -ms-linear-gradient(top, #5282d4, #28667d);
  background-image: -o-linear-gradient(top, #5282d4, #28667d);
  background-image: linear-gradient(to bottom, #5282d4, #28667d);
    cursor: pointer;
    position: relative;
    z-index: 0;
    border-radius: 10px;
    margin-top: 2rem;
}

.btn:before {
    content: '';
    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
    position: absolute;
    top: -2px;
    left:-2px;
    background-size: 400%;
    z-index: -1;
    filter: blur(5px);
    width: calc(100% + 4px);
    height: calc(100% + 4px);
    animation: glowing 20s linear infinite;
    opacity: 0;
    transition: opacity .4s ease-in-out;
    border-radius: 10px;
    box-shadow: 0 9px blueviolet;
}

.btn:active {
    color: #000;
    box-shadow: 0 4px black;
}

.btn:active:after {
    background: transparent;
    animation: glowing 50s linear infinite;
    transition: opacity .4s ease-in-out;
}

.btn:hover:before {
    opacity: 1;
    box-shadow: 0 4px black;
}

.btn:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: #5282d4;
  background-image: -webkit-linear-gradient(top, #5282d4, #28667d);
  background-image: -moz-linear-gradient(top, #5282d4, #28667d);
  background-image: -ms-linear-gradient(top, #5282d4, #28667d);
  background-image: -o-linear-gradient(top, #5282d4, #28667d);
  background-image: linear-gradient(to bottom, #5282d4, #28667d);
    left: 0;
    top: 0;
    border-radius: 10px;
    /* box-shadow: 0 4px black; */

}


@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}

.space {
  margin-top: 10px;
}
footer {
  position: relative;
  width: 100%;
  height: 9vh;
  background-color: #343a40;
  color: white;
  box-shadow: 0px 0px 16px 9px black;
}
/*  */
.icons ul {
  display: flex;
  margin-top: 190px !important;
}

.icons ul li {
  list-style: none;
}

.icons ul li a {
  width: 40px;
  height: 40px;
  background-color: #fff;
  text-align: center;
  line-height: 35px;
  font-size: 15px;
  margin: 0 10px;
  display: block;
  border-radius: 50%;
  position: relative;
  overflow: hidden;
  border: 3px solid #fff;
  z-index: 1;
  margin-top: 15px;
}

.icons ul li a .icon {
  position: relative;
  color: #262626;
  transition: 0.5s;
  z-index: 3;
}

.icons ul li a:hover .icon {
  color: #fff;
  transform: rotateY(360deg);
}

.icons ul li a:before {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100%;
  background: #55acee;
  transition: 0.5s;
  z-index: 2;
}

.icons ul li a:hover:before {
  top: 0;
}

.icons ul li:nth-child(2) a:before {
  background: black;
}
/* CopyRights */
.icons ul p {
  position: absolute;
  left: 40%;
  top: 20px;
}

#topBtn{
  position: fixed;
  bottom: 10px;
  right: 30px;
  z-index: 9;
  opacity: 0;
  pointer-events: none;
  transition: opacity .3 ease-in-out;
}

#topBtn a{
  height: 39px;
  width: 37px;
  text-align: center;
  background: #000;
  display: block;
  border-radius: 10px;
  cursor: pointer;
}

#topBtn a span{
  color: #f2f2f2;
  line-height: 39px;
  font-size: 28px;
} 

.logo-img{
  margin-left: 40px;
  height: 45px;
  width: 80px;
}

@media only screen and (max-width: 500px) {
  .icons ul p {
    position: absolute;
    left: 50%;
    top: 20px;
  }
}

a.nav-link { /* To heighlight */
  color: floralwhite !important;
  font-size: 28px;
}

    nav.navbar.navbar-expand-lg.navbar-light.bg-info { /* To make nav-bar sticky */
      position: fixed;
      top: 0;
      width: 100%;
  }
      
  .bg-info {  /* To make nav-bar background transparent and shadow effect */
/*     background-color: #ada39f00!important;
    box-shadow: 0px 0px 16px 9px #efecec4d; */
    z-index:100;
}   


strong {  /* To make text more visible */
  color: floralwhite;
  font-size: 25px;
}

